2007-12-11  Werner Koch  <wk@g10code.com>

	* visibility.c (gcry_md_hash_buffer): Don't use return vor a void
	function.  Hey, why does gcc not complain about this?
	(gcry_ac_io_init_va): Ditto.

2007-12-05  Werner Koch  <wk@g10code.com>

	* hwfeatures.c (detect_ia32_gnuc): Depend on ENABLE_PADLOCK_SUPPORT.

2007-12-03  Werner Koch  <wk@g10code.com>

	* misc.c (_gcry_logv): Use abort for error levels fatal and bug as
	this is more approriate for a library.  Terminate the secmem
	before doing so.
	(_gcry_fatal_error): Terminate secmem before abort.
	* secmem.c (_gcry_secmem_malloc_internal): Use log_bug instead of
	exit.

2007-11-29  Werner Koch  <wk@g10code.com>

	* hwfeatures.c (detect_ia32_gnuc): Detect Padlock engine.

2007-11-13  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (_GCRY_GCC_ATTR_MALLOC): Fixed gcc version check.
	Reported by Gabriele Monti.

2007-10-31  Werner Koch  <wk@g10code.com>

	* global.c (gcry_control): Factor most code out to ..
	(_gcry_vcontrol): .. new.
	* sexp.c (_gcry_sexp_vbuild): New.
	* mpi.h (_gcry_mpi_set, _gcry_mpi_set_ui, _gcry_mpi_invm): Remove
	prototypes as they are already in gcrypt.h.

2007-10-30  Werner Koch  <wk@g10code.com>

	* sexp.c (gcry_sexp_nth_string): Replace by _gcry_sexp_nth_string.

	* visibility.h, visibility.c: New.
	* g10lib.h: Include visibility.h instead of gcrypt.h.
	* globals.c (_gcry_malloc): Rename to ..
	(do_malloc): .. this.

	* hwfeatures.c: New.
	* global.c (global_init): Detect features.
	(print_config): Print them.

2007-08-22  Werner Koch  <wk@g10code.com>

	* dumpsexp.c: New.
	* Makefile.am (bin_PROGRAMS): Install it.

	* getrandom.c (print_version): Use new standard license line.
	* gcryptrnd.c (print_version): Ditto.

2007-06-06  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_THREAD_OPTION_PTH_IMPL): Factror network
	related code out so that the prototypes can be adjusted for W32.
	(_GCRY_THREAD_OPTION_PTH_IMPL_NET): New.

2007-05-09  Werner Koch  <wk@g10code.com>
