@@ -1,3 +1,7 @@
+2008-01-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* hwfeatures.c (detect_ia32_gnuc): Fix inline asm.
+
 2007-12-11  Werner Koch  <wk@g10code.com>
 
 	* visibility.c (gcry_md_hash_buffer): Don't use return vor a void
